K8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata: 
   name: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
     app: frontend
  template:
    metadata:
      labels:
       app: frontend

    spec:
     containers:
     - name: frontend
       image: chaitra2711/frontend:latestV1  
       imagePullPolicy: Never
       ports:
       - containerPort: 3000
